tests/errors/poisoning/cascade-call-arg.fn
---
Description: Undefined argument should not produce an overload-mismatch error
Expected: FN3204
---

namespace Math
{
    type Vector2
    {
        init(x: f32, y: f32) {}
    }
}

type Program
{
    static fn Main -> i32
    {
        var v = Math.Vector2(1.0, undefined_arg)
        return 0
    }
}
